<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Distenation.SettingsFragment">
    <ScrollView
        android:id="@+id/f_account_sv_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top">
            <!-- First Block -->
            <androidx.cardview.widget.CardView
                android:id="@+id/f_account_cv_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="#fff"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!-- Profile Material Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/f_account_mtbtn_profile"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:enabled="true"
                        android:fontFamily="@font/segoeui_font"
                        android:text="@string/profile"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccountItems"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_filled_profile"
                        app:iconGravity="textStart"
                        app:iconPadding="20dp"
                        app:iconTint="@color/colorGreenMessage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/qr_code_btn"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:enabled="true"
                        android:fontFamily="@font/segoeui_font"
                        android:text="QR Code"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccountItems"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_qr_code"
                        app:iconGravity="textStart"
                        app:iconPadding="20dp"
                        app:iconTint="@color/colorGreenMessage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <!-- Account Settings Material Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/f_account_mtbtn_account_settings"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:enabled="true"
                        android:fontFamily="@font/segoeui_font"
                        android:text="@string/account_settings"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccountItems"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_account_settings"
                        app:iconGravity="textStart"
                        app:iconPadding="20dp"
                        app:iconTint="@color/colorGreenMessage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <!-- Logout Material Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/f_account_mtbtn_logout"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:enabled="true"
                        android:fontFamily="@font/segoeui_font"
                        android:text="Log out"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccountItems"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_logout"
                        app:iconGravity="textStart"
                        app:iconPadding="20dp"
                        app:iconTint="@color/colorGreenMessage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!-- Second Block -->
            <androidx.cardview.widget.CardView
                android:id="@+id/f_account_cv_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="#fff"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!-- About us Material Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/f_account_mtbtn_about_us"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:enabled="true"
                        android:fontFamily="@font/segoeui_font"
                        android:text="@string/about_us"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccountItems"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_info"
                        app:iconGravity="textStart"
                        app:iconPadding="20dp"
                        app:iconTint="@color/colorGreenMessage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- About Travisit Material Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/f_account_mtbtn_about_travisit"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:enabled="true"
                        android:gravity="start"
                        android:fontFamily="@font/segoeui_font"
                        android:text="@string/about_travisit_business"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccountItems"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_info"
                        app:iconGravity="textStart"
                        app:iconPadding="20dp"
                        app:iconTint="@color/colorGreenMessage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <!-- Privacy Policy Material Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/f_account_mtbtn_privacy_policy"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:enabled="true"
                        android:fontFamily="@font/segoeui_font"
                        android:text="@string/privacy_policy"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccountItems"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_secure"
                        app:iconGravity="textStart"
                        app:iconPadding="20dp"
                        app:iconTint="@color/colorGreenMessage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <!-- Share App Material Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/f_account_mtbtn_share"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:enabled="true"
                        android:fontFamily="@font/segoeui_font"
                        android:text="@string/share_app"
                        android:textAllCaps="false"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorAccountItems"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_baseline_share_24"
                        app:iconGravity="textStart"
                        app:iconPadding="20dp"
                        app:iconTint="@color/colorGreenMessage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <!-- Rate App Material Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/f_account_mtbtn_rate"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:enabled="true"
                        android:gravity="start"
                        android:fontFamily="@font/segoeui_font"
                        android:text="@string/rate_app"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccountItems"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_rate"
                        app:iconGravity="textStart"
                        app:iconPadding="20dp"
                        app:iconTint="@color/colorGreenMessage"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>